--- a/src/leaderboard/sass/sass/screen.scss
+++ b/src/leaderboard/sass/sass/screen.scss
@@ -1,8 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
 @import "compass/reset";
 
 /*
@@ -12,18 +7,21 @@
 */
 
 body {
+  background: radial-gradient(ellipse at bottom, #0b1016 0%, #020304 100%);
+  height: 100vh;
+  font-size: 12px;
+  overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  min-height: 100vh;
-  font-size: 1.5em;
 }
 
 pl-leaderboard {
   font-family: 'Overpass', sans-serif;
   color: #e7f9fb;
-  min-height: 100vh;
+  // color: rgba(250,232,232,.95);
+  height: 100vh;
   position: relative;
   z-index: 2;
 }
@@ -35,34 +33,37 @@ pl-leaderboard {
   -----------------------
 */
 
-pl-leaderboard h1.leaders-header {
-  text-align: center;
-  margin: 2.5vh auto 1vh;
-  width: 100%;
-  line-height: 1.1em;
-  word-wrap: normal;
-}
+pl-leaderboard {
 
-pl-leaderboard h1.leaders-header:before {
-  content:url('../../engage-logo.svg');
-  display: block;
-}
+  .leaders-header {
+    text-align: center;
+    margin: 2.5vh auto 1vh;
+    width: 100%;
+    line-height: 1.1em;
+    word-wrap: normal;
 
-pl-leaderboard article {
-  margin: 1.5vh 0;
-  width: 100%;
-}
+    &:before {
+      content:url('../../engage-logo.svg');
+      display: block;
+    }
+  }
 
-pl-leaderboard article section {
-  width: 100%;
-  vertical-align: middle;
-}
+  article {
+    margin: 1.5vh 0;
+    max-height: 100vh;
 
-pl-leaderboard article section ul {
-  margin: 0 auto;
-  padding: 0;
-  max-width: 100%;
-  list-style-type: none;
+    section {
+      width: 100%;
+      vertical-align: middle;
+
+      ul {
+        margin: 0 auto;
+        padding: 0;
+        max-width: 100%;
+        list-style-type: none;
+      }
+    }
+  }
 }
 
 
@@ -73,11 +74,21 @@ pl-leaderboard article section ul {
 */
 
 pl-leaderboard article section ul.leader-titles {
-  margin-bottom: .8vh;
+  margin-bottom: 1.5vh;
+  padding-bottom: 1.5vh;
+  border-bottom: 1px solid rgba(255, 255, 255, .15);
+
+  li {
+    font-size: 1.5em;
+    font-weight: 600;
+    letter-spacing: .5px;
+    padding: 1% 3.2% .2%;
+    opacity: .65;
+  }
 }
 
 pl-leaderboard article section ul.leader-titles li {
-  font-size: 1.2em;
+  font-size: 1.5em;
   font-weight: 600;
   letter-spacing: .5px;
   padding: 1vh 3.2% .2vh;
@@ -96,48 +107,48 @@ pl-leaderboard article section ul li {
   flex-wrap: wrap;
   align-items: center;
   opacity: .85;
+
+  .rank {
+    width: 14%;
+    max-width: 14%;
+  }
+
+  .username {
+    width: 68%;
+    max-width: 68%;
+    word-break: break-all;
+  }
+
+  .score {
+    width: 18%;
+    max-width: 18%;
+    text-align: right;
+  }
 }
 
 pl-leaderboard article section ul.leaders li {
-  font-size: 1.4em;
+  font-size: 2em;
   font-weight: 500;
   letter-spacing: 1px;
   padding: 2% 3.5% 2%;
   height: 100%;
   background-color: #def1f6;
   border-bottom: 1px solid rgba(0,0,0,.5);
-}
 
-pl-leaderboard article section ul.leaders li:first-child {
-  padding: 1% 3.5% 1%;
-}
+  &:first-child {
+    padding: 1% 3.5% 1%;
 
-pl-leaderboard article section ul li .rank {
-  width: 14%;
-  max-width: 14%;
-}
+    .score::before {
+      content:url('../../rh-icon-award-ribbon.svg');
+      margin-right: 5%;
+    }
+  }
 
-pl-leaderboard article section ul li .username {
-  width: 68%;
-  max-width: 68%;
-  word-break: break-all;
-}
-
-pl-leaderboard article section ul li .score {
-  width: 18%;
-  max-width: 68%;
-  text-align: right;
-  /*word-break: break-all;*/
-}
-
-pl-leaderboard article section ul.leaders li .score {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-pl-leaderboard article section ul.leaders li:first-child .score::before {
-  content:url('../../rh-icon-award-ribbon.svg');
+  .score {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
 }
 
 
@@ -147,15 +158,32 @@ pl-leaderboard article section ul.leaders li:first-child .score::before {
   -----------------------
 */
 
-@media (min-width: 1024px) {
+@media (min-width: 1024px) and (max-width: 1920px) {
 
   pl-leaderboard article h1.leaders-header {
-    max-width: 70vw;
+    max-width: 75vw;
   }
 
   pl-leaderboard article {
     margin: 0 auto;
-    max-width: 70vw;
+    max-width: 75vw;
+    max-height: 80vh;
+  }
+}
+
+@media (min-width: 1920px) {
+
+  body {
+    font-size: 16px;
+  }
+
+  pl-leaderboard article h1.leaders-header {
+    max-width: 65vw;
+  }
+
+  pl-leaderboard article {
+    margin: 0 auto;
+    max-width: 65vw;
     max-height: 80vh;
   }
 }
@@ -167,6 +195,7 @@ pl-leaderboard article section ul.leaders li:first-child .score::before {
   -----------------------
 */
 
+/* list fade animation */
 ul.leaders {
     -webkit-animation: listfade linear 1.5s; /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: listfade linear 1.5s; /* Firefox < 16 */
@@ -208,32 +237,27 @@ ul.leaders {
 }
 
 
-// n is number of stars required
-@function multiple-box-shadow ($n) {
-  $value: '#{random(5000)}px #{random(5000)}px #FFF';
+/* star background animation */
+@function multi-box-shadow ($n) {
+  $value: '#{random(5000)}px #{random(5000)}px rgba(220,220,220,.8)';
 
   @for $i from 2 through $n {
-    $value: '#{$value} , #{random(5000)}px #{random(5000)}px #FFF';
+    $value: '#{$value} , #{random(5000)}px #{random(5000)}px rgba(220,220,220,.8)';
   }
 
   @return unquote($value);
 }
 
-$shadows-small:  multiple-box-shadow(3000);
-$shadows-medium: multiple-box-shadow(1000);
-$shadows-big:    multiple-box-shadow(500);
+$shadow-sm: multi-box-shadow(3000);
+$shadow-md: multi-box-shadow(1000);
+$shadow-lg: multi-box-shadow(500);
 
-body {
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  overflow: hidden;
-}
-
-#stars {
+#stars-1 {
   width: 1px;
   height: 1px;
   background: transparent;
-  box-shadow: $shadows-small;
-  animation: animStar 50s linear infinite;
+  box-shadow: $shadow-sm;
+  animation: animateStars 100s linear infinite;
 
   &:after {
     content: " ";
@@ -242,17 +266,17 @@ body {
     width: 1px;
     height: 1px;
     background: transparent;
-    box-shadow: $shadows-small;
+    box-shadow: $shadow-sm;
   }
 }
 
 
-#stars2 {
+#stars-2 {
   width: 2px;
   height: 2px;
   background: transparent;
-  box-shadow: $shadows-medium;
-  animation: animStar 100s linear infinite;
+  box-shadow: $shadow-md;
+  animation: animateStars 120s linear infinite;
 
   &:after {
     content: " ";
@@ -261,16 +285,16 @@ body {
     width: 2px;
     height: 2px;
     background: transparent;
-    box-shadow: $shadows-medium;
+    box-shadow: $shadow-md;
   }
 }
 
-#stars3 {
-  width: 3px;
-  height: 3px;
+#stars-3 {
+  width: 2.5px;
+  height: 2.5px;
   background: transparent;
-  box-shadow: $shadows-big;
-  animation: animStar 150s linear infinite;
+  box-shadow: $shadow-lg;
+  animation: animateStars 150s linear infinite;
 
     &:after {
       content: " ";
@@ -279,18 +303,16 @@ body {
       width: 3px;
       height: 3px;
       background: transparent;
-      box-shadow: $shadows-big;
+      box-shadow: $shadow-lg;
     }
 }
 
-
-
-@keyframes animStar {
+@keyframes animateStars {
   from {
     transform: translateY(0px);
   }
   to {
-    transform: translateY(-2000px);
+    transform: translateY(-5000px);
   }
 }
 
@@ -301,13 +323,13 @@ body {
   -----------------------
 */
 
-pl-leaderboard article section ul.leaders li:first-child   { background-color: #0088a3; }
-pl-leaderboard article section ul.leaders li:nth-child(2)  { background-color: #01809a; }
-pl-leaderboard article section ul.leaders li:nth-child(3)  { background-color: #01748c; }
-pl-leaderboard article section ul.leaders li:nth-child(4)  { background-color: #00697e; }
-pl-leaderboard article section ul.leaders li:nth-child(5)  { background-color: #016074; }
-pl-leaderboard article section ul.leaders li:nth-child(6)  { background-color: #005668; }
-pl-leaderboard article section ul.leaders li:nth-child(7)  { background-color: #005162; }
-pl-leaderboard article section ul.leaders li:nth-child(8)  { background-color: #004a5a; }
-pl-leaderboard article section ul.leaders li:nth-child(9)  { background-color: #004452; }
-pl-leaderboard article section ul.leaders li:nth-child(10) { background-color: #003d4b; }
+pl-leaderboard article section ul.leaders li:first-child   { background-color: rgba(0,136,163,.8); }
+pl-leaderboard article section ul.leaders li:nth-child(2)  { background-color: rgba(1,128,154,.8); }
+pl-leaderboard article section ul.leaders li:nth-child(3)  { background-color: rgba(1,116,140,.8); }
+pl-leaderboard article section ul.leaders li:nth-child(4)  { background-color: rgba(0,105,126,.8); }
+pl-leaderboard article section ul.leaders li:nth-child(5)  { background-color: rgba(1,96,116,.8); }
+pl-leaderboard article section ul.leaders li:nth-child(6)  { background-color: rgba(0,86,104,.8); }
+pl-leaderboard article section ul.leaders li:nth-child(7)  { background-color: rgba(0,81,98,.8); }
+pl-leaderboard article section ul.leaders li:nth-child(8)  { background-color: rgba(0,74,90,.8); }
+pl-leaderboard article section ul.leaders li:nth-child(9)  { background-color: rgba(0,68,82,.8); }
+pl-leaderboard article section ul.leaders li:nth-child(10) { background-color: rgba(0,61,75,.8); }
