--- a/src/leaderboard/sass/sass/screen.scss
+++ b/src/leaderboard/sass/sass/screen.scss
@@ -1,4 +1,20 @@
 @import "compass/reset";
+@import url(https://fonts.googleapis.com/css?family=Overpass:500,600,800);
+
+$background-color:                    #020304;
+$background-color-blue:               #002235;
+$font-base:                              12px;
+$font-base-lg:                           16px;
+$font-heading:                          4.5em;
+$font-subtitle:                         2.5em;
+$font-table:                            1.8em;
+$font-titles:                           1.5em;
+$font-weight-light:                       500;
+$font-weight-bold:                        600;
+$font-weight-heavy:                       800;
+$color-white:           rgba(250,232,232,.95);
+$color-grey:                 rgba(56,73,90,1);
+
 
 /*
   -----------------------
@@ -6,51 +22,52 @@
   -----------------------
 */
 
-body {
-  background: radial-gradient(ellipse at bottom, #0b1016 0%, #020304 100%);
-  height: 100vh;
-  font-size: 12px;
-  overflow: hidden;
+html {
+  height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
 
-pl-leaderboard {
+body {
+  margin: 0;
+  height: 100%;
   font-family: 'Overpass', sans-serif;
-  color: #e7f9fb;
-  // color: rgba(250,232,232,.95);
-  height: 100vh;
-  position: relative;
-  z-index: 2;
+  font-size: $font-base;
+  font-weight: $font-weight-light;
+  background-image: radial-gradient(75% 90% at top, $background-color-blue, #000f18 100%);
+  background-color: $background-color;
+  background-position: top center;
+  overflow: hidden;
 }
 
 
-/*
-  -----------------------
-     position elements
-  -----------------------
-*/
-
 pl-leaderboard {
+  position: relative;
+  height: 100%;
+  z-index: 2;
+  color: $color-white;
 
   .leaders-header {
     text-align: center;
-    margin: 2.5vh auto 1vh;
+    margin: 2.2vh auto .8vh;
     width: 100%;
     line-height: 1.1em;
     word-wrap: normal;
 
     &:before {
-      content:url('../../engage-logo.svg');
+      content:url('../../assets/engage-logo.svg');
       display: block;
+      width: 25%;
+      margin: 0 auto;
     }
   }
 
   article {
     margin: 1.5vh 0;
-    max-height: 100vh;
+    height: 100%;
+    max-height: 100%;
 
     section {
       width: 100%;
@@ -73,26 +90,18 @@ pl-leaderboard {
   -----------------------
 */
 
-pl-leaderboard article section ul.leader-titles {
+ul.leader-titles {
   margin-bottom: 1.5vh;
-  padding-bottom: 1.5vh;
-  border-bottom: 1px solid rgba(255, 255, 255, .15);
+  padding-bottom: .8vh; //flag - adjust padding/margin
+  border-bottom: 1px solid rgba(255, 255, 255, .2);
 
   li {
-    font-size: 1.5em;
-    font-weight: 600;
+    font-size: $font-titles;
+    font-weight: $font-weight-bold;
     letter-spacing: .5px;
-    padding: 1% 3.2% .2%;
-    opacity: .65;
+    padding: 0 2% .5%;
+    opacity: .675;
   }
-}
-
-pl-leaderboard article section ul.leader-titles li {
-  font-size: 1.5em;
-  font-weight: 600;
-  letter-spacing: .5px;
-  padding: 1vh 3.2% .2vh;
-  opacity: .65;
 }
 
 
@@ -106,41 +115,42 @@ pl-leaderboard article section ul li {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  opacity: .85;
 
   .rank {
-    width: 14%;
-    max-width: 14%;
+    width: 15%;
+    max-width: 15%;
   }
 
   .username {
-    width: 68%;
-    max-width: 68%;
+    width: 60%;
+    max-width: 60%;
     word-break: break-all;
   }
 
   .score {
-    width: 18%;
-    max-width: 18%;
+    width: 25%;
+    max-width: 25%;
     text-align: right;
   }
 }
 
-pl-leaderboard article section ul.leaders li {
-  font-size: 2em;
-  font-weight: 500;
+ul.leaders li {
+  font-size: $font-table;
+  font-weight: $font-weight-light;
   letter-spacing: 1px;
-  padding: 2% 3.5% 2%;
+  padding: 2% 2.3% 2%;
   height: 100%;
-  background-color: #def1f6;
+  background-color: rgba(0,61,75,.8);
   border-bottom: 1px solid rgba(0,0,0,.5);
 
   &:first-child {
-    padding: 1% 3.5% 1%;
+    padding: .5% 2.3% .65%;
 
     .score::before {
-      content:url('../../rh-icon-award-ribbon.svg');
-      margin-right: 5%;
+      content:url('../../assets/rh-icon-award-ribbon.svg');
+      margin-right: 4%;
+      height: 20%;
+      width: 20%;
     }
   }
 
@@ -160,7 +170,7 @@ pl-leaderboard article section ul.leaders li {
 
 @media (min-width: 1024px) and (max-width: 1920px) {
 
-  pl-leaderboard article h1.leaders-header {
+  h1.leaders-header {
     max-width: 75vw;
   }
 
@@ -174,7 +184,7 @@ pl-leaderboard article section ul.leaders li {
 @media (min-width: 1920px) {
 
   body {
-    font-size: 16px;
+    font-size: $font-base-lg;
   }
 
   pl-leaderboard article h1.leaders-header {
@@ -191,145 +201,19 @@ pl-leaderboard article section ul.leaders li {
 
 /*
   -----------------------
-        animations
-  -----------------------
-*/
-
-/* list fade animation */
-ul.leaders {
-    -webkit-animation: listfade linear 1.5s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: listfade linear 1.5s; /* Firefox < 16 */
-    -ms-animation: listfade linear 1.5s; /* Internet Explorer */
-    -o-animation: listfade linear 1.5s; /* Opera < 12.1 */
-    animation: listfade linear 1.5s;
-
-    -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1;
-}
-
-/* Firefox < 16 */
-@-moz-keyframes listfade {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes listfade {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes listfade {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes listfade {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-@keyframes listfade {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-
-/* star background animation */
-@function multi-box-shadow ($n) {
-  $value: '#{random(5000)}px #{random(5000)}px rgba(220,220,220,.8)';
-
-  @for $i from 2 through $n {
-    $value: '#{$value} , #{random(5000)}px #{random(5000)}px rgba(220,220,220,.8)';
-  }
-
-  @return unquote($value);
-}
-
-$shadow-sm: multi-box-shadow(3000);
-$shadow-md: multi-box-shadow(1000);
-$shadow-lg: multi-box-shadow(500);
-
-#stars-1 {
-  width: 1px;
-  height: 1px;
-  background: transparent;
-  box-shadow: $shadow-sm;
-  animation: animateStars 100s linear infinite;
-
-  &:after {
-    content: " ";
-    position: absolute;
-    top: 5000px;
-    width: 1px;
-    height: 1px;
-    background: transparent;
-    box-shadow: $shadow-sm;
-  }
-}
-
-
-#stars-2 {
-  width: 2px;
-  height: 2px;
-  background: transparent;
-  box-shadow: $shadow-md;
-  animation: animateStars 120s linear infinite;
-
-  &:after {
-    content: " ";
-    position: absolute;
-    top: 5000px;
-    width: 2px;
-    height: 2px;
-    background: transparent;
-    box-shadow: $shadow-md;
-  }
-}
-
-#stars-3 {
-  width: 2.5px;
-  height: 2.5px;
-  background: transparent;
-  box-shadow: $shadow-lg;
-  animation: animateStars 150s linear infinite;
-
-    &:after {
-      content: " ";
-      position: absolute;
-      top: 5000px;
-      width: 3px;
-      height: 3px;
-      background: transparent;
-      box-shadow: $shadow-lg;
-    }
-}
-
-@keyframes animateStars {
-  from {
-    transform: translateY(0px);
-  }
-  to {
-    transform: translateY(-5000px);
-  }
-}
-
-
-/*
-  -----------------------
     rank color gradient
   -----------------------
 */
 
-pl-leaderboard article section ul.leaders li:first-child   { background-color: rgba(0,136,163,.8); }
-pl-leaderboard article section ul.leaders li:nth-child(2)  { background-color: rgba(1,128,154,.8); }
-pl-leaderboard article section ul.leaders li:nth-child(3)  { background-color: rgba(1,116,140,.8); }
-pl-leaderboard article section ul.leaders li:nth-child(4)  { background-color: rgba(0,105,126,.8); }
-pl-leaderboard article section ul.leaders li:nth-child(5)  { background-color: rgba(1,96,116,.8); }
-pl-leaderboard article section ul.leaders li:nth-child(6)  { background-color: rgba(0,86,104,.8); }
-pl-leaderboard article section ul.leaders li:nth-child(7)  { background-color: rgba(0,81,98,.8); }
-pl-leaderboard article section ul.leaders li:nth-child(8)  { background-color: rgba(0,74,90,.8); }
-pl-leaderboard article section ul.leaders li:nth-child(9)  { background-color: rgba(0,68,82,.8); }
-pl-leaderboard article section ul.leaders li:nth-child(10) { background-color: rgba(0,61,75,.8); }
+pl-leaderboard article section ul.leaders li:first-child   { background-color: rgba(0,136,163,.75); }
+pl-leaderboard article section ul.leaders li:nth-child(2)  { background-color: rgba(1,128,154,.75); }
+pl-leaderboard article section ul.leaders li:nth-child(3)  { background-color: rgba(1,116,140,.75); }
+pl-leaderboard article section ul.leaders li:nth-child(4)  { background-color: rgba(0,105,126,.75); }
+pl-leaderboard article section ul.leaders li:nth-child(5)  { background-color: rgba(1,96,116,.75); }
+pl-leaderboard article section ul.leaders li:nth-child(6)  { background-color: rgba(0,86,104,.75); }
+pl-leaderboard article section ul.leaders li:nth-child(7)  { background-color: rgba(0,81,98,.75); }
+pl-leaderboard article section ul.leaders li:nth-child(8)  { background-color: rgba(0,74,90,.75); }
+pl-leaderboard article section ul.leaders li:nth-child(9)  { background-color: rgba(0,68,82,.75); }
+pl-leaderboard article section ul.leaders li:nth-child(10) { background-color: rgba(0,61,75,.75); }
+
+@import "animations.scss";
