--- a/src/leaderboard/sass/sass/screen.scss
+++ b/src/leaderboard/sass/sass/screen.scss
@@ -1,20 +1,18 @@
 @import "compass/reset";
-@import url(https://fonts.googleapis.com/css?family=Overpass:500,600,800);
+@import url(https://fonts.googleapis.com/css?family=Overpass:500,600,800,900);
 
-$background-color:                    #020304;
-$background-color-blue:               #002235;
-$font-base:                              12px;
-$font-base-lg:                           16px;
-$font-heading:                          4.5em;
-$font-subtitle:                         2.5em;
-$font-table:                            1.8em;
-$font-titles:                           1.5em;
-$font-weight-light:                       500;
-$font-weight-bold:                        600;
-$font-weight-heavy:                       800;
-$color-white:           rgba(250,232,232,.95);
-$color-grey:                 rgba(56,73,90,1);
-
+$background-color:                rgba(1,2,2,1);
+$background-color-blue:         rgba(1,18,27,1);
+$color-grey:                   rgba(56,73,90,1);
+$color-white:              rgba(252,250,249,.6);
+$font-base:                                12px;
+$font-base-lg:                             18px;
+$font-heading:                            4.2em;
+$font-table:                              1.7em;
+$font-titles:                             1.2em;
+$font-weight-light:                         500;
+$font-weight-bold:                          600;
+$font-weight-heavy:                         800;
 
 /*
   -----------------------
@@ -36,7 +34,7 @@ body {
   font-family: 'Overpass', sans-serif;
   font-size: $font-base;
   font-weight: $font-weight-light;
-  background-image: radial-gradient(75% 90% at top, $background-color-blue, #000f18 100%);
+  background-image: radial-gradient(75% 90% at top, $background-color-blue, #000e16 100%);
   background-color: $background-color;
   background-position: top center;
   overflow: hidden;
@@ -50,18 +48,9 @@ pl-leaderboard {
   color: $color-white;
 
   .leaders-header {
-    text-align: center;
-    margin: 2.2vh auto .8vh;
-    width: 100%;
-    line-height: 1.1em;
-    word-wrap: normal;
-
-    &:before {
-      content:url('../../assets/engage-logo.svg');
-      display: block;
-      width: 25%;
-      margin: 0 auto;
-    }
+    margin: 4.3% auto 5.8%;
+    width: 39%;
+    content: url('../../assets/logo.png');
   }
 
   article {
@@ -76,7 +65,7 @@ pl-leaderboard {
       ul {
         margin: 0 auto;
         padding: 0;
-        max-width: 100%;
+        max-width: 94%;
         list-style-type: none;
       }
     }
@@ -90,19 +79,24 @@ pl-leaderboard {
   -----------------------
 */
 
-ul.leader-titles {
-  margin-bottom: 1.5vh;
-  padding-bottom: .8vh; //flag - adjust padding/margin
-  border-bottom: 1px solid rgba(255, 255, 255, .2);
-
-  li {
-    font-size: $font-titles;
-    font-weight: $font-weight-bold;
-    letter-spacing: .5px;
-    padding: 0 2% .5%;
-    opacity: .675;
-  }
-}
+// ul.leader-titles {
+//   margin-bottom: 1.5vh;
+//   padding-bottom: .8vh; //flag - adjust padding/margin
+//   border-bottom: 1px solid rgba(255, 255, 255, .2);
+//   text-transform: uppercase;
+//
+//   li {
+//     font-size: $font-titles;
+//     font-weight: $font-weight-bold;
+//     letter-spacing: .5px;
+//     padding: 0 2% .5%;
+//     opacity: .675;
+//
+//     .username::before {
+//       content: "";
+//     }
+//   }
+// }
 
 
 /*
@@ -117,47 +111,48 @@ pl-leaderboard article section ul li {
   align-items: center;
 
   .rank {
-    width: 15%;
-    max-width: 15%;
+    width: 9%;
+    max-width: 9%;
   }
 
   .username {
-    width: 60%;
-    max-width: 60%;
+    width: 65%;
+    max-width: 65%;
     word-break: break-all;
+    text-transform: lowercase;
+
+    &::before {
+      content: "|";
+      margin-right: 5.5%;
+      text-shadow: none;
+      opacity: .12;
+    }
   }
 
   .score {
-    width: 25%;
-    max-width: 25%;
+    width: 26%;
+    max-width: 26%;
     text-align: right;
+
+    // &::before {
+    //   content: "|";
+    //   padding-right: 20%;
+    // }
   }
 }
 
 ul.leaders li {
   font-size: $font-table;
-  font-weight: $font-weight-light;
-  letter-spacing: 1px;
-  padding: 2% 2.3% 2%;
+  font-weight: $font-weight-heavy;
+  letter-spacing: 2px;
+  padding: 2.4% 2.55% 2.4%;
   height: 100%;
   background-color: rgba(0,61,75,.8);
-  border-bottom: 1px solid rgba(0,0,0,.5);
+  border-bottom: 2px solid rgba(0,0,0,.4);
 
   &:first-child {
-    padding: .5% 2.3% .65%;
-
-    .score::before {
-      content:url('../../assets/rh-icon-award-ribbon.svg');
-      margin-right: 4%;
-      height: 20%;
-      width: 20%;
-    }
-  }
-
-  .score {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    color: #5db358; //orange: f6c982;
+    font-weight: 900;
   }
 }
 
@@ -171,13 +166,13 @@ ul.leaders li {
 @media (min-width: 1024px) and (max-width: 1920px) {
 
   h1.leaders-header {
-    max-width: 75vw;
+    max-width: 75%;
   }
 
   pl-leaderboard article {
     margin: 0 auto;
-    max-width: 75vw;
-    max-height: 80vh;
+    max-width: 75%;
+    max-height: 80%;
   }
 }
 
@@ -188,13 +183,13 @@ ul.leaders li {
   }
 
   pl-leaderboard article h1.leaders-header {
-    max-width: 65vw;
+    max-width: 60%;
   }
 
   pl-leaderboard article {
     margin: 0 auto;
-    max-width: 65vw;
-    max-height: 80vh;
+    max-width: 60%;
+    max-height: 80%;
   }
 }
 
@@ -205,15 +200,15 @@ ul.leaders li {
   -----------------------
 */
 
-pl-leaderboard article section ul.leaders li:first-child   { background-color: rgba(0,136,163,.75); }
-pl-leaderboard article section ul.leaders li:nth-child(2)  { background-color: rgba(1,128,154,.75); }
-pl-leaderboard article section ul.leaders li:nth-child(3)  { background-color: rgba(1,116,140,.75); }
-pl-leaderboard article section ul.leaders li:nth-child(4)  { background-color: rgba(0,105,126,.75); }
-pl-leaderboard article section ul.leaders li:nth-child(5)  { background-color: rgba(1,96,116,.75); }
-pl-leaderboard article section ul.leaders li:nth-child(6)  { background-color: rgba(0,86,104,.75); }
-pl-leaderboard article section ul.leaders li:nth-child(7)  { background-color: rgba(0,81,98,.75); }
-pl-leaderboard article section ul.leaders li:nth-child(8)  { background-color: rgba(0,74,90,.75); }
-pl-leaderboard article section ul.leaders li:nth-child(9)  { background-color: rgba(0,68,82,.75); }
-pl-leaderboard article section ul.leaders li:nth-child(10) { background-color: rgba(0,61,75,.75); }
+pl-leaderboard article section ul.leaders li:first-child   { background-color: rgba(0,136,163,.38); }
+pl-leaderboard article section ul.leaders li:nth-child(2)  { background-color: rgba(1,128,154,.38); }
+pl-leaderboard article section ul.leaders li:nth-child(3)  { background-color: rgba(1,116,140,.38); }
+pl-leaderboard article section ul.leaders li:nth-child(4)  { background-color: rgba(0,105,126,.38); }
+pl-leaderboard article section ul.leaders li:nth-child(5)  { background-color: rgba(1,96,116,.38); }
+pl-leaderboard article section ul.leaders li:nth-child(6)  { background-color: rgba(0,86,104,.38); }
+pl-leaderboard article section ul.leaders li:nth-child(7)  { background-color: rgba(0,81,98,.38); }
+pl-leaderboard article section ul.leaders li:nth-child(8)  { background-color: rgba(0,74,90,.38); }
+pl-leaderboard article section ul.leaders li:nth-child(9)  { background-color: rgba(0,68,82,.38); }
+pl-leaderboard article section ul.leaders li:nth-child(10) { background-color: rgba(0,61,75,.38); }
 
 @import "animations.scss";
