Update overpass font and add leaderboard change place animation

--- a/src/leaderboard/sass/sass/animations.scss
+++ b/src/leaderboard/sass/sass/animations.scss
@@ -137,10 +137,10 @@ $shadow-lg: multi-box-shadow(500);
  * Change Spots Animation
  */
 
-@keyframes change{
-  from { background: rgba(255,255,255,.3); }
-  to { background: rgba(0,0,0,.2); transform: rotate3d(1,0,0,360deg); }
-}
+ @keyframes change{
+   from { opacity: .3; }
+   to { opacity: 1; transform: rotate3d(1,0,0,360deg); }
+ }
 
 ul.leaders{
   > li{
